--- a/serverless.yml
+++ b/serverless.yml
@@ -14,6 +14,8 @@ provider:
         - "ecs:DescribeClusters"
         - "ecs:ListTagsForResource"
         - "route53:ChangeResourceRecordSets"
+        - "ecs:DescribeContainerInstances"
+        - "ec2:DescribeInstances"
       Resource: "*"  
 
 functions:
